# SignalProcessingToolkit

./: ARCHITECTURE.md  LICENSE  README.md
SignalProcessingToolkit/: .gitignore  LICENSE  README.md  fix_unions.py  fix_unions2.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify_ui.py
SignalProcessingToolkit/src/: app.py  config.py  constants.py  logger.py  main.py
SignalProcessingToolkit/src/core/: __init__.py  application.py  constants.py  events.py  exceptions.py  history.py  logging_config.py  recent_files.py  settings.py
SignalProcessingToolkit/src/core/plugins/: __init__.py  interface.py  manager.py
SignalProcessingToolkit/src/dsp/: __init__.py
SignalProcessingToolkit/src/dsp/convolution/: __init__.py  circular.py  linear.py
SignalProcessingToolkit/src/dsp/correlation/: __init__.py  auto_correlation.py  cross_correlation.py
SignalProcessingToolkit/src/dsp/fft/: __init__.py  fft_engine.py  inverse_fft.py  peak_detection.py  spectrum.py
SignalProcessingToolkit/src/dsp/filters/: __init__.py  design.py
SignalProcessingToolkit/src/dsp/filters/fir/: __init__.py  base.py  lowpass.py
SignalProcessingToolkit/src/dsp/filters/iir/: __init__.py  base.py  butterworth.py
SignalProcessingToolkit/src/dsp/generators/: __init__.py  base.py  chirp.py  cosine.py  dc.py  gaussian.py  noise.py  pulse.py  sawtooth.py  sine.py  square.py  triangle.py
SignalProcessingToolkit/src/dsp/noise/: __init__.py  generators.py  metrics.py  removers.py
SignalProcessingToolkit/src/dsp/operations/: __init__.py  arithmetic.py  base.py  clipping.py  mixing.py  normalization.py  rectification.py  scaling.py  time_reversal.py  time_shift.py
SignalProcessingToolkit/src/dsp/sampling/: __init__.py  aliasing.py  reconstruction.py  sampler.py
SignalProcessingToolkit/src/dsp/windows/: __init__.py  base.py
SignalProcessingToolkit/src/models/: __init__.py  audio.py  enums.py  fft_result.py  filter_design.py  image.py  project.py  signal.py
SignalProcessingToolkit/src/plots/: __init__.py  base.py  cursors.py  exporters.py  frequency_domain.py  power_spectrum.py  spectrogram.py  themes.py  time_domain.py
SignalProcessingToolkit/src/repositories/implementations/: __init__.py  file_audio_repository.py  file_image_repository.py  file_project_repository.py  file_signal_repository.py
SignalProcessingToolkit/src/repositories/interfaces/: __init__.py  audio_repository.py  image_repository.py  project_repository.py  signal_repository.py
SignalProcessingToolkit/src/services/: __init__.py  audio_service.py  convolution_service.py  correlation_service.py  export_service.py  fft_service.py  filter_service.py  image_service.py  noise_service.py  sampling_service.py  signal_service.py  window_service.py
SignalProcessingToolkit/src/ui/: main_window.py
SignalProcessingToolkit/src/ui/components/: graph_area.py  parameter_panel.py  plot_area.py  sidebar.py  statusbar.py  theme_switcher.py  toolbar.py
SignalProcessingToolkit/src/ui/components/dialogs/: export_dialog.py  settings_dialog.py
SignalProcessingToolkit/src/ui/controllers/: audio_controller.py  base_controller.py  convolution_controller.py  correlation_controller.py  export_controller.py  fft_controller.py  filters_controller.py  image_controller.py  main_controller.py  noise_controller.py  sampling_controller.py  settings_controller.py  signal_generator_controller.py  signal_operations_controller.py  windows_controller.py
SignalProcessingToolkit/src/ui/styles/: __init__.py  theme_manager.py
SignalProcessingToolkit/src/ui/viewmodels/: audio_vm.py  base_viewmodel.py  convolution_vm.py  correlation_vm.py  export_vm.py  fft_vm.py  filters_vm.py  image_vm.py  noise_vm.py  sampling_vm.py  signal_generator_vm.py  signal_operations_vm.py  windows_vm.py
SignalProcessingToolkit/src/ui/views/: audio_view.py  convolution_view.py  correlation_view.py  dashboard_view.py  fft_view.py  filters_view.py  image_view.py  monitor_view.py  noise_view.py  sampling_view.py  signal_generator_view.py  signal_operations_view.py  windows_view.py
SignalProcessingToolkit/src/utils/: __init__.py  decorators.py  helpers.py
SignalProcessingToolkit/tests/: conftest.py
SignalProcessingToolkit/tests/test_services/: test_audio_service.py  test_export_service.py  test_fft_service.py  test_filter_service.py  test_sampling_service.py  test_signal_service.py  test_windowing_service.py
