[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-processing-toolkit"
version = "1.0.0"
description = "Professional desktop application for signal generation, analysis, processing, and visualization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Signal Processing Toolkit Team", email = "dev@spt.example.com"}
]
maintainers = [
    {name = "Signal Processing Toolkit Team", email = "dev@spt.example.com"}
]
keywords = [
    "signal-processing",
    "dsp",
    "fft",
    "filters",
    "audio-processing",
    "image-processing",
    "pyqt6",
    "desktop-application"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "PyQt6-sip>=13.6.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyqtgraph>=0.13.0",
    "matplotlib>=3.8.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "opencv-python>=4.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "typing-extensions>=4.8.0",
    'importlib-resources>=6.1.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.90.0",
    "ruff>=0.1.0",
    "black>=23.10.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "pre-commit>=3.6.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "ipython>=8.18.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
    "watchdog>=3.0.0",
    "py-spy>=0.3.14",
    "memory-profiler>=0.61.0",
    "snakeviz>=2.2.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pip-tools>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/signal-processing-toolkit/spt"
Repository = "https://github.com/signal-processing-toolkit/spt"
Issues = "https://github.com/signal-processing-toolkit/spt/issues"
Documentation = "https://signal-processing-toolkit.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "ui: marks tests as UI tests requiring display",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "dist",
    "build",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
    "T20", # flake8-print
    "S",   # flake8-bandit
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # incompatible with D211
    "D213",  # incompatible with D212
    "S101",  # Use of assert (allowed in tests)
    "T201",  # print statement (allowed in debug)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D100", "D104", "D107"]
"src/signal_processing_toolkit/ui/*" = ["D100", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | dist
  | build
  | \.egg-info
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyqtgraph.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sounddevice"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cv2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fpdf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.ui.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.dsp.generators.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.dsp.operations.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

[tool.pre-commit-hooks]
ruff-check = {id = "ruff", name = "ruff", entry = "ruff check", language = "system", types = ["python"]}
ruff-format = {id = "ruff-format", name = "ruff-format", entry = "ruff format", language = "system", types = ["python"]}
black = {id = "black", name = "black", entry = "black", language = "system", types = ["python"]}
isort = {id = "isort", name = "isort", entry = "isort", language = "system", types = ["python"]}
mypy = {id = "mypy", name = "mypy", entry = "mypy", language = "system", types = ["python"]}
pytest = {id = "pytest", name = "pytest", entry = "pytest", language = "system", pass_filenames = false, always_run = true}